# chinese-voice-assistant

./: .gitignore  README.md  download_piper_model.py  main.py  pyproject.toml
archived/: llm.py  system_control.py  vision_agent.py
config/: chinese_wake_words.txt  keywords.txt  wake_words.txt
docs/: MCP_INTEGRATION.md  PLAYWRIGHT_SETUP.md
scripts/: download_models.py  install_playwright.bat  pinyin_helper.py
src/voice_assistant/: __init__.py  config.py  llm.py  mcp_client.py  react_agent.py  system_control.py  tts.py  vision.py  vision_agent.py  wake_word.py
tests/: quick_test.py  quick_test_fixed.py  test_models.py  test_screenshot.py
